# bobcoin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COIN_RESEARCH.md  Cargo.toml  DASHBOARD.md  FEATURES_AND_FORKS.md  GEMINI.md  GPT.md  IMPLEMENTATION_SUMMARY.md  LLM_INSTRUCTIONS.md  README.md  RESEARCH_PLAN.md  ROADMAP.md  SESSION_HANDOFF.md  copilot-instructions.md  requirements.txt  session-ses_4975.md  setup.py
bobcoin/: __init__.py  cli.py
bobcoin-consensus/: Cargo.toml
bobcoin-core/: Cargo.toml
bobcoin-core/src/: lib.rs
bobcoin-dance/: Cargo.toml
bobcoin-dance/src/: lib.rs
bobcoin-economy/: Cargo.toml
bobcoin-economy/src/: lib.rs
bobcoin-mining/: Cargo.toml
bobcoin-mining/src/: lib.rs  relationship.rs
bobcoin-networking/: Cargo.toml
bobcoin-networking/src/: lib.rs  packet.rs
bobcoin-node/: Cargo.toml
bobcoin-node/src/: main.rs
bobcoin-oracle/: Cargo.toml
bobcoin-oracle/src/: lib.rs  ocr.rs
bobcoin-privacy/: Cargo.toml
bobcoin-privacy/src/: lib.rs
bobcoin/core/: __init__.py  block.py  blockchain.py  transaction.py
bobcoin/crypto/: __init__.py  keys.py  privacy.py
bobcoin/economy/: __init__.py  anti_hoarding.py  dating_app.py  exercise_game.py  mmorpg.py  music_game.py
bobcoin/mining/: __init__.py  exercise_verifier.py  relationship_verifier.py  social_value_mining.py  social_verifier.py
bobcoin/utils/: __init__.py
bobcoin/wallet/: __init__.py  wallet.py
docs/: TECHNICAL.md
examples/: demo.py
