[package]  
name = "bobcoin-core"  
version = "0.1.0"  
edition = "2021"  
  
[dependencies]  
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10"  
hex = "0.4" 
serde_json = "1.0"

bobcoin-mining = { path = "../bobcoin-mining", features = ["serde"] }
bobcoin-dance = { path = "../bobcoin-dance", features = ["serde"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
