[package]
name = "bobcoin-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
libp2p = { version = "0.53", features = [
    "gossipsub", 
    "kad", 
    "macros", 
    "tokio", 
    "noise", 
    "yamux", 
    "quic", 
    "relay", 
    "dcutr", 
    "autonat", 
    "dns",
    "mdns",
    "tcp"
] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bobcoin-core = { path = "../bobcoin-core" }
bobcoin-dance = { version = "0.1.0", path = "../bobcoin-dance" }
bobcoin-mining = { path = "../bobcoin-mining" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
